# Analisador_rostos_opencv

./: .gitignore  CMakeLists.txt  CopyFiles.cmake  MainWindow.cpp  MainWindow.h  README.md  ReaderFilesInFolder.cpp  ReaderFilesInFolder.h  config.ini  main.cpp
core/: ReaderFacesInFolder.cpp
gui/: MainWindow.cpp  MainWindow.h  OptionsWindow.cpp  OptionsWindow.hpp
include/core/: ReaderFacesInFolder.hpp
include/gui/: MainWindow.hpp  OptionsWindow.hpp
include/options/: ReaderFacesInFolder.hpp
include/util/: Config.hpp  FolderManagment.hpp
options/: ReaderFacesInFolder.cpp  ReaderFacesInFolder.h++
src/: main.cpp
util/: Config.cpp  FolderManagment.cpp  FolderManagment.hpp  ReaderFilesInFolder.cpp
